cmake_minimum_required(VERSION 2.6)

PROJECT(LIBSHMMEDIA)

SET(INCLUDE_LIST 
    include
    ../libtvuutil/include
    ../libsharememory/include
	) 

SET(CMAKE_CXX_FLAGS "-Wall -DTVU_LINUX -D__STDC_FORMAT_MACROS -D__STDC_CONSTANT_MACROS -std=c++11 -fPIC")

SET(PATH_SRC ${LIBSHMMEDIA_SOURCE_DIR}/src)
AUX_SOURCE_DIRECTORY(${PATH_SRC} SRC_LIST)

INCLUDE_DIRECTORIES(${INCLUDE_LIST})
SET(LIBRARY_OUTPUT_PATH ${LIBSHMMEDIA_SOURCE_DIR}/lib/${CMAKE_BUILD_TYPE})

ADD_LIBRARY(shmmedia  ${SRC_LIST})
